# Machine-Learning-in-Cpp

./: .gitignore  CMakeLists.txt  README.md
include/: data_utils.h  dataframe.h  kmean.h  knn.h  linear.h  logistic.h  naive.h  pca.h
include/data/: csv_handler.h  data_utils.h
include/knn/: knn.h
include/linear_reggresion/: linear.h
include/logistic_reggresion/: logistic.h
src/data/: csv_handler.cpp  data_utils.cpp  dataframe.cpp
src/kmean/: kmean.cpp  main.cpp  readme.md  visualize.py
src/knn/: knn.cpp  main.cpp  readme.md
src/linear_reggresion/: linear.cpp  main.cpp  readme.md
src/logistic_reggresion/: logistic.cpp  main.cpp  readme.md
src/naive/: main.cpp  naive.cpp  readme.md
src/pca/: main.cpp  pca.cpp  readme.md  visualize.py
